--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "base64-arraybuffer": "^1.0.2",
     "encoding-japanese": "^2.0.0",
+    "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
     "pinia": "^2.0.32",
     "sass": "^1.58.3",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/encoding-japanese": "^2.0.1",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.14.2",
     "@types/papaparse": "^5.3.7",
     "@types/uuid": "^9.0.1",
