--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "prettier": "^2.8.4",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
+    "vite-plugin-static-copy": "^0.13.1",
     "vue-tsc": "^1.2.0"
   }
 }
