--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "base64-arraybuffer": "^1.0.2",
+    "dayjs": "^1.11.7",
+    "decimal.js": "^10.4.3",
     "encoding-japanese": "^2.0.0",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@types/decimal.js": "^7.4.0",
     "@types/encoding-japanese": "^2.0.1",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.14.2",
