--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier": "^2.8.4",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
+    "vite-plugin-checker": "^0.5.6",
     "vite-plugin-static-copy": "^0.13.1",
     "vue-tsc": "^1.2.0"
   }
